# rusty-log-cruncher

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: wheels.yml
python/: pyproject.toml
python/rusty_cruncher/: __init__.py
rust-crate/: Cargo.toml
rust-crate/benches/: bench.rs
rust-crate/src/: lib.rs
tests/: test_rollup.py
