[package]
name = "rusty_log_cruncher"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_log_cruncher"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
polars = { version = "0.41", features = ["lazy", "csv", "parquet"] }
rayon = "1.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
